cleaned up a little code. added a loop to the function to create a tiny tree trunk with the tree. i'm ridiculous.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Your boy out here planting emoji trees</h1>
+  <h1>Happy Arbor Day</h1>
   <div class="form">
     <h3>So you wanna make a tree??</h3>
     <h3>Please select a number for your tree's height and a single character for the tree to be made of:</h3>
